--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,10 @@ board = d1_mini
 framework = arduino
 monitor_speed = 115200
 
-; Ważne: Wymuszamy najnowszą bibliotekę Supli
+; NAPRAWA BŁĘDU: Poprawna nazwa biblioteki
 lib_deps = 
-    acz-c/SuplaDevice @ ^24.0.0
+    supla/SuplaDevice
 
-; Ustawienia partycji (opcjonalne, ale zalecane dla OTA)
+; Ważne dla systemu plików (żeby pamiętał ustawienia)
 board_build.flash_mode = dout
+board_build.ldscript = eagle.flash.4m1m.ld
