Działa na serwerze

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,10 +4,11 @@ board = d1_mini
 framework = arduino
 monitor_speed = 115200
 
-; NAPRAWA BŁĘDU: Poprawna nazwa biblioteki
+; Tuta wymuszamy pobranie najnowszej wersji prosto z GitHuba
+; Dzięki temu będziesz miał wersję v24+, a nie starą v2.4
 lib_deps = 
-    supla/SuplaDevice
+    https://github.com/SUPLA/supla-device.git
 
-; Ważne dla systemu plików (żeby pamiętał ustawienia)
+; Ustawienia pamięci
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m1m.ld
